--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,3 +32,29 @@ jobs:
       uses: docker://docker.io/markstreet/sssv:latest
       with:
         args: make --jobs
+
+    - name: Create progress.csv
+      uses: docker://docker.io/markstreet/sssv:latest
+      with:
+        args: make progress
+
+    - name: Create progress_filename variable
+      id: vars
+      shell: bash
+      run: |
+        echo "::set-output name=progress_filename::$(echo ${GITHUB_SHA}.$(git show -s --format=%at ${GITHUB_SHA}).csv)"
+
+    - name: Rename progress.csv
+      run: mv progress.csv "${{ steps.vars.outputs.progress_filename }}"
+
+    - name: Push progress.csv to sssv-website repo
+      if: ${{ github.event_name == 'push' }}
+      uses: dmnemec/copy_file_to_another_repo_action@v1.0.4
+      env:
+        API_TOKEN_GITHUB: ${{ secrets.WEBSITE_REPO_ACCESS }}
+      with:
+        source_file: "${{ steps.vars.outputs.progress_filename }}"
+        destination_repo: 'mkst/sssv-website'
+        destination_folder: 'progress/data'
+        user_email: 'streetster@gmail.com'
+        user_name: 'mkst'
