Adding libultra/os funcs from libreultra

--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -49,25 +49,26 @@ segments:
     vram:  0x801378C0
     overlay: no
     subsections:
-    - [0x12FC0, asm, libultra/os/initialize]
+    - [0x12FC0, c, libultra/os/initialize]
     - [0x13250, asm, libc/ll]
     - [0x13510, asm, libultra/gu/sqrtf]
-    - [0x13520, asm, libultra/os/gettime]
-    - [0x135B0, asm, libultra/os/writebackdcacheall]
+    - [0x13520, c, libultra/os/gettime]
+    - [0x135B0, hasm, libultra/os/writebackdcacheall]
     - [0x135E0, asm, libultra/io/pidma]
-    - [0x136F0, asm, libultra/os/recvmesg]
-    - [0x13830, asm, libultra/os/virtualtophysical]
-    - [0x138B0, asm, libultra/os/createmesgqueue]
-    - [0x138E0, asm, libultra/os/startthread]
+    - [0x136F0, c, libultra/os/recvmesg]
+    - [0x13830, c, libultra/os/virtualtophysical]
+    - [0x138B0, c, libultra/os/createmesgqueue]
+    - [0x138E0, c, libultra/os/startthread]
     - [0x13A30, asm, libultra/sched/sched] # scheduler with a bunch of inlined funcs?
     - [0x14370, asm, libultra/io/visetspecial]
     - [0x14530, asm, libultra/io/contreaddata]
-    - [0x14750, asm, libultra/os/sendmesg]
-    - [0x14900, asm, libultra/io/visetxscale]
+    - [0x14750, c, libultra/os/sendmesg]
+    - [0x148A0, bin, alignment_meme_001] # 0x60 bytes of 0x00
+    - [0x14900, c, libultra/io/visetxscale]
     - [0x14A30, asm, libultra/io/visetyscale]
     - [0x14A90, asm, libultra/io/viblack]
-    - [0x14B00, asm, libultra/os/invalicache]
-    - [0x14B80, asm, libultra/os/invaldcache]
+    - [0x14B00, hasm, libultra/os/invalicache]
+    - [0x14B80, hasm, libultra/os/invaldcache]
     - [0x14C30, asm, libc/bzero]
     - [0x14CD0, asm, libc/sprintf]
     - [0x14D50, asm, libc/syncprintf]
@@ -77,7 +78,7 @@ segments:
     - [0x14F20, asm, libultra/io/aisetfreq]
     - [0x15080, asm, libultra/audio/sl]
     - [0x15140, asm, libultra/audio/heapalloc]
-    - [0x151A0, asm, libultra/os/createthread]
+    - [0x151A0, c, libultra/os/createthread]
     - [0x152F0, asm, libultra/io/aisetnextbuf]
     - [0x153A0, asm, libultra/io/aigetlen]
     - [0x153B0, asm, libultra/audio/synthesizer]
@@ -110,11 +111,11 @@ segments:
     - [0x19530, asm, libultra/audio/synstartvoiceparam]
     - [0x19620, asm, libultra/audio/synsetpan]
     - [0x196B0, asm, libultra/audio/synsetfxmix]
-    - [0x19750, asm, libultra/os/setintmask]
+    - [0x19750, hasm, libultra/os/setintmask]
     - [0x197F0, asm, libultra/io/pimgr]
-    - [0x19980, asm, libultra/os/setthreadpri]
+    - [0x19980, c, libultra/os/setthreadpri]
     - [0x19A60, asm, libultra/gu/usprite]
-    - [0x19AB0, asm, libultra/os/seteventmesg]
+    - [0x19AB0, c, libultra/os/seteventmesg]
     - [0x19B20, asm, libultra/io/controller]
     - [0x19E60, asm, libultra/io/contsetch]
     - [0x19ED0, asm, libultra/io/pfsinit]
@@ -133,22 +134,22 @@ segments:
     - [0x1BC30, asm, libultra/gu/lookathil]
     - [0x1C420, asm, libultra/gu/random]
     - [0x1C450, asm, libultra/io/vigetline]
-    - [0x1C460, asm, libultra/os/setsr]
-    - [0x1C470, asm, libultra/os/getsr]
-    - [0x1C480, asm, libultra/os/setfpccsr]
-    - [0x1C490, asm, libultra/io/sprawread]
-    - [0x1C4E0, asm, libultra/io/sprawwrite]
-    - [0x1C530, asm, libultra/os/exceptasm]
-    - [0x1CE40, asm, libultra/os/writebackdcache]
-    - [0x1CEC0, asm, libultra/os/maptlbrdb]
+    - [0x1C460, hasm, libultra/os/setsr]
+    - [0x1C470, hasm, libultra/os/getsr]
+    - [0x1C480, hasm, libultra/os/setfpccsr]
+    - [0x1C490, asm, libultra/io/sirawread]
+    - [0x1C4E0, asm, libultra/io/sirawwrite]
+    - [0x1C530, hasm, libultra/os/exceptasm]
+    - [0x1CE40, hasm, libultra/os/writebackdcache]
+    - [0x1CEC0, hasm, libultra/os/maptlbrdb]
     - [0x1CF20, asm, libultra/io/pirawread]
-    - [0x1CF80, asm, libultra/os/interrupt]
-    - [0x1CFC0, asm, libultra/os/getcount]
-    - [0x1CFD0, asm, libultra/os/timerintr]
-    - [0x1D3D0, asm, libultra/os/jammesg]
+    - [0x1CF80, hasm, libultra/os/interrupt]
+    - [0x1CFC0, hasm, libultra/os/getcount]
+    - [0x1CFD0, c, libultra/os/timerintr]
+    - [0x1D3D0, c, libultra/os/jammesg]
     - [0x1D520, asm, libultra/io/pigetcmdq] # TODO: double-check
-    - [0x1D550, asm, libultra/os/thread]
-    - [0x1D590, asm, libultra/os/probetlb]
+    - [0x1D550, c, libultra/os/thread]
+    - [0x1D590, hasm, libultra/os/probetlb]
     - [0x1D650, asm, libultra/io/vimgr]
     - [0x1D9B0, asm, libultra/io/visetmode]
     - [0x1DA20, asm, libultra/io/visetevent]
@@ -165,7 +166,7 @@ segments:
     - [0x1E250, asm, libc/xprintf]
     - [0x1EF10, asm, libc/string]
     - [0x1EFB0, asm, libultra/io/conteepwrite]
-    - [0x1F4D0, asm, libultra/os/settimer]
+    - [0x1F4D0, c, libultra/os/settimer]
     - [0x1F5B0, asm, libultra/io/conteepread]
     - [0x1F8D0, asm, libultra/audio/syndelete]
     - [0x1F8E0, asm, libultra/io/ai]
@@ -184,7 +185,7 @@ segments:
     - [0x22660, asm, libultra/io/cartrominit]
     - [0x22760, asm, libultra/io/leodiskinit]
     - [0x22860, asm, libultra/io/piacs]
-    - [0x22920, asm, libultra/os/getthreadpri]
+    - [0x22920, c, libultra/os/getthreadpri]
     - [0x22940, asm, libultra/io/pirawdma]
     - [0x22A20, asm, libultra/io/epirawdma]
     - [0x22C50, asm, libultra/io/devmgr]
@@ -199,8 +200,8 @@ segments:
     - [0x258D0, asm, libultra/gu/normalize]
     - [0x25960, asm, libultra/io/si]
     - [0x25990, asm, libultra/io/leointerrupt]
-    - [0x26210, asm, libultra/os/destroythread]
-    - [0x26320, asm, libultra/os/setcompare]
+    - [0x26210, c, libultra/os/destroythread]
+    - [0x26320, hasm, libultra/os/setcompare]
     - [0x26330, asm, libultra/io/vigetcurrcontext]
     - [0x26340, asm, libultra/io/viswapcontext]
     - [0x266A0, asm, libultra/io/spgetstat]
@@ -214,11 +215,11 @@ segments:
     - [0x26DA0, asm, libc/xldtob]
     - [0x27860, asm, libultra/audio/filter]
     - [0x27880, asm, libultra/audio/reverb]
-    - [0x284D0, asm, libultra/os/resetglobalintmask]
+    - [0x284D0, c, libultra/os/resetglobalintmask]
     - [0x28530, asm, libultra/io/epirawwrite]
     - [0x286C0, asm, libultra/io/epirawread]
-    - [0x28860, asm, libultra/os/setglobalintmask]
-    - [0x288B0, asm, libultra/os/yieldthread]
+    - [0x28860, c, libultra/os/setglobalintmask]
+    - [0x288B0, c, libultra/os/yieldthread]
     - [0x28900, asm, libc/ldiv]
   - [0x028A90, bin]
   - [0x02FDD0, bin] # textures; CH, 7-segment score display
