--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -43,8 +43,9 @@ segments:
     - [0x10CB0, c]
     - [0x10DC0, c]
     - [0x123E0, c]
-    # fake split here for progress
-    - [0x12FC0, linker, code_lib]
+    #############################
+    - [0x12FC0, linker, code_lib] # fake split here for progress
+    #############################
     - [0x12FC0, c, libultra/os/initialize]
     - [0x13250, c, libultra/libc/ll]
     - [0x13510, hasm, libultra/gu/sqrtf]
@@ -636,19 +637,21 @@ segments:
     - [0x75BC80, asm]
     - [0x75D3D0, asm]
     - [0x763930, c, sssv/init]
+    - [0x7667E0, c, sssv/animals/tortoise]
     - [0x767AC0, c, sssv/overlay2_767AC0]
     - [0x7688B0, c]
     - [0x7689A0, c]
     - [0x768B90, asm]
     - [0x76BCA0, asm]
     - [0x76D850, asm]
-    - [0x76F7D0, asm]
-    - [0x7741B0, asm]
-    - [0x775E30, asm]
-    - [0x77D760, asm]
-    - [0x77EDB0, asm]
-    - [0x780E50, asm]
-    - [0x783D90, asm]
+    - [0x76F7D0, c]
+    - [0x7741B0, c]
+    - [0x775E30, c]
+    - [0x77A480, c, sssv/animals/husky]
+    - [0x77D760, c, sssv/animals/vulture]
+    - [0x77EDB0, c]
+    - [0x780E50, c]
+    - [0x783D90, c]
     - [0x786320, c]
     - [0x78A890, c]
     - [0x78CEB0, c]
@@ -682,9 +685,8 @@ segments:
     - [0x7D0AA0, .rodata, overlay2_794EE0]
     - [0x7D0B40, bin]
     - [0x7D0B70, .rodata, sssv/credits]
-    - [0x7D1150, bin]
-    - [0x7D1170, bin] # cheats, mapped to 0x803BFAC0
-    - [0x7D1200, bin]
+    - [0x7D1150, .rodata, sssv/cheats]
+    - [0x7D1210, bin]
     - [0x7D1AD0, bin]
     - [0x7D61F0, bin]
     - [0x7D64D0, bin]
